<resources>
    <string name="app_name">Odinservs</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s when an unknown printer</string>
    <string name="login">Login</string>
    <string name="login_now">Login Now</string>
    <string name="add_item">Add Item</string>
    <string name="register">Register</string>
    <string name="places_api_key">AIzaSyCufmP_KTpzEF4kp-dwtOdDJOxgxHrTD0E</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="next">Next</string>
    <string name="email_or_mobile">Email address / Mobile number</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
    <string name="land_address">Landmark Address</string>
    <string name="service_pricee">Service Price($)</string>
    <string name="open_time">Open Time</string>
    <string name="close_time">Close Time</string>
    <string name="select_category">Select Category</string>
    <string name="con_pass">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="enter_code">Enter code</string>
    <string name="star">******</string>
    <string name="verify">Verify</string>
    <string name="get_a_call">Get a call</string>
    <string name="resend">Resend</string>
    <string name="no_car_found">No Car Avilable</string>
    <string name="searching_driver">Searching Driver...</string>
    <string name="driver_arrived">Driver Arrived</string>
    <string name="your_trip_has_begin">Your trip has begin</string>
    <string name="your_trip_is_finished">Your trip is finished</string>
    <string name="get_a_call_now">Get a call now</string>
    <string name="did_not_recieve_code">Did not receive the code?</string>
    <string name="we_send_sms">We have send you an SMS on +919587667656 with 6 digit verification code.</string>
    <string name="home">Home</string>
    <string name="my_booking">Booking</string>
    <string name="dashboard">Dashboard</string>
    <string name="wallet">Wallet</string>
    <string name="my_review">My Review</string>
    <string name="profile">Profile</string>
    <string name="history">History</string>
    <string name="top_cat">Top Categories</string>
    <string name="my_services">My Services</string>
    <string name="view_all">View All</string>
    <string name="taxi">Taxi</string>
    <string name="disinfecting">Disinfecting</string>
    <string name="car_wash">Car Wash</string>
    <string name="on_demand">On Demand</string>
    <string name="home_cleaning">Home Cleaning</string>
    <string name="beauty_service">Beauty Services</string>
    <string name="massages">Massages</string>
    <string name="doctor">Doctor</string>
    <string name="charges">Charges</string>
    <string name="service_charges">Service Charges</string>
    <string name="maids">Maids</string>
    <string name="subtotal">Subtotal</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="apply">Apply</string>
    <string name="service_cost">Service Cost</string>
    <string name="service_loc">Service Location</string>
    <string name="promo_code_discount">Promo Code Discount</string>
    <string name="fitness_coach">Fitness Coach</string>
    <string name="dev_services">Delivery Services</string>
    <string name="enable_other_services">Apply for new services</string>
    <string name="food_dev">Food Delivery</string>
    <string name="notification">Notifications</string>
    <string name="avalibility">Availability</string>
    <string name="support">Support</string>
    <string name="grocery_dev">Grocery Delivery</string>
    <string name="parcel_dev">Parcel Delivery</string>
    <string name="pharmacy_dev">Pharmacy Delivery</string>
    <string name="your_booking">Your Booking</string>
    <string name="booking">Booking</string>
    <string name="list">List</string>
    <string name="all">All</string>
    <string name="money_in">Money In</string>
    <string name="money_out">Money Out</string>
    <string name="map">Map</string>
    <string name="order">Order</string>
    <string name="car_washing">Car Washing</string>
    <string name="service_pro">Service Provider</string>
    <string name="select_service">Select Service</string>
    <string name="filter">Filter</string>
    <string name="book">Book</string>
    <string name="remove">Remove</string>
    <string name="cart">Cart</string>
    <string name="booking_detail">Booking Detail</string>
    <string name="service">Service</string>
    <string name="Gallery">Gallery</string>
    <string name="checkout">Checkout</string>
    <string name="review">Review</string>
    <string name="add_special_instruction_for_service_provider">Add Special Instruction for service provider here</string>
    <string name="maps_api_key">AIzaSyCufmP_KTpzEF4kp-dwtOdDJOxgxHrTD0E</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_dev_address">Please set delivery address</string>
    <string name="add_address">Add Address</string>
    <string name="select_dev_add">Select Delivery Address</string>
    <string name="buil_hous_flat">Building/House/Flat No.</string>
    <string name="landmark">Landmark(e.g hospital,park etc)</string>
    <string name="save">Save</string>
    <string name="add_new_add">Add New Address</string>
    <string name="continu">Continue</string>
    <string name="change">Change</string>
    <string name="select_pay_method">Select Payment Method</string>
    <string name="cash">Cash</string>
    <string name="use_wallet_balance">Use wallet balance</string>
    <string name="payment">Payment</string>
    <string name="card_payment">Card Payment</string>
    <string name="add">Add</string>
    <string name="add_card">Add Card</string>
    <string name="card_holder_name">Card holder name</string>
    <string name="cash_payment">Cash Payment</string>
    <string name="done">Done</string>
    <string name="online_payment">Online Payment</string>
    <string name="Choose_booking_date">Choose Booking Date</string>
    <string name="select_date">Select Date</string>
    <string name="select_Time">Select Time</string>
    <string name="cuisines">Cuisines</string>
    <string name="hot_sellers">Hot Sellers</string>
    <string name="medical_shops">Medical Shops</string>
    <string name="search">Serach</string>
    <string name="veg">Vegetables</string>
    <string name="fruits">Fruits</string>
    <string name="rating">Rating</string>
    <string name="low_to_high">Cost (Low to High)</string>
    <string name="high_to_low">Cost (High to Low)</string>
    <string name="sort_by">Sort By</string>
    <string name="veg_only">Veg only</string>
    <string name="open_now">Open Now</string>
    <string name="view_cart">View Cart</string>
    <string name="daily_time">Daily Time</string>
    <string name="bill_details">Bill Details</string>
    <string name="item_total">Item Total</string>
    <string name="dev_charges">Delivery Charges</string>
    <string name="to_pay">To pay</string>
    <string name="aval_coupons">Available Coupons</string>
    <string name="or_select_coupon_from_the_kast_below">Or Select Coupon From The Kast Below</string>
    <string name="enter_coupon_code">Enter coupon code</string>
    <string name="select_time">Select Time</string>
    <string name="order_status">Order Status</string>
    <string name="items_details">Item Details</string>
    <string name="order_received">Order Received</string>
    <string name="on_the_way">On the way</string>
    <string name="tracking">TRACKING</string>
    <string name="processed">Processed</string>
    <string name="order_id">Order Id : </string>
    <string name="delivered">Delivered</string>
    <string name="track_order">Tracking Order</string>
    <string name="total_pay">Total Pay</string>
    <string name="order_date">Order Date</string>
    <string name="completed">Completed</string>
    <string name="cancellation">Cancellation</string>
    <string name="items_detail">Item Details</string>
    <string name="contact_dev_boy">Contact Delivery Boy</string>
    <string name="payment_method">Payment Method</string>
    <string name="product_details">Product Details</string>
    <string name="order_details">Order Details</string>
    <string name="pick_up_ready_for_walkin">Pick up ready for walkin</string>
    <string-array name="update_status_entry">
        <item>Update Status</item>
        <item>PickUp</item>
        <item>Delivered</item>
    </string-array>
    <string-array name="lang_sp">
        <item>Select Language</item>
        <item>English</item>
        <item>Spanish</item>
        
    </string-array>
    <string-array name="currency_sp">
        <item>USD</item>
        <item>EUR</item>
        
    </string-array>
    <string-array name="ondemand_category">
        <item>Select Service Category</item>
        <item>A.C Repair</item>
        <item>Electrician</item>
        <item>Carpenter</item>
        <item>Mason</item>
        <item>Plumber</item>
        <item>Pest Control</item>
        <item>Painting</item>
        <item>House Cleaning</item>
        <item>Appliance Repair</item>
        <item>Sofa Cleaning</item>
        <item>Tiles &amp; Flooring</item>
    </string-array>
    <string name="services">Services</string>
    <string name="details">Details</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="add_services">Add Services</string>
    <string name="service_name">Service Name</string>
    <string name="edit_services">Edit Services</string>
    <string name="service_description">Service Description</string>
    <string name="service_price">Service Price ($)</string>
    <string name="service_detail">Service Details</string>
    <string name="doc1">Doc 1</string>
    <string name="doc2">Doc 2</string>
    <string name="doc3">Doc 3</string>
    <string name="edit">Edit</string>
    <string name="manage_services">Manage Services</string>
    <string name="manage_nservices">Manage\nServices</string>
    <string name="upload_doc">Upload Service Document</string>
    <string name="my_devlivery">My Delivery Orders</string>
    <string name="customer_name">Customer Name :</string>
    <string name="cust_add">Customer\nAddress :</string>
    <string name="custo_add">Customer Address :</string>
    <string name="res_add">Restaurant\nAddress :</string>
    <string name="land_mark_add">Landmark\nAddress :</string>
    <string name="payment_type">Payment Method :</string>
    <string name="amount">Amount :</string>
    <string name="contact_cust">Contact Customer :</string>
    <string name="send_money">Send Money</string>
    <string name="its_safe_and_secure">It\'s safe and secure</string>
    <string name="select_memeber_text">Select the member type to whom you would like to transfer to wallet balance</string>
    <string name="user">User</string>
    <string name="enter_amt">Enter amount</string>
    <string name="provider">Provider</string>
    <string name="pay_now">Pay Now</string>
    <string name="generate_invoice">Invoice</string>
    <string name="hours_worked">Hours Worked</string>
    <string name="rate_per_hour">Rate Per Hour</string>
    <string name="total_hour_price">Total Hours Price</string>
    <string name="total_price">Total Price</string>
    <string name="chosse_pay_method">Choose Payment Method</string>
    <string name="items_used">Items Used</string>
    <string name="desp">Description</string>
</resources>