<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@android:color/transparent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_30sdp"
        android:background="@color/white"
        android:padding="@dimen/_10sdp"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvEventText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/sort_by"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:textSize="@dimen/_15sdp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="horizontal">


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioEng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_15sdp"
                    android:text="@string/rating"/>

                <RadioButton
                    android:id="@+id/radioRomanian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/low_to_high"/>

                <RadioButton
                    android:id="@+id/radioRussian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/high_to_low"/>

            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/btApply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:textColor="@color/white"
            android:text="@string/apply"
            android:textStyle="bold"
            android:textSize="@dimen/_12sdp"
            android:textAllCaps="false"
            android:background="@drawable/button_green"/>

    </LinearLayout>

</RelativeLayout>