<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:padding="@dimen/_10sdp"
        android:background="@drawable/white_above_back">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:padding="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"
            android:text="@string/send_money"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/_15sdp"
            android:text="@string/its_safe_and_secure"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            android:text="@string/select_memeber_text"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:visibility="gone"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal"
            android:weightSum="2">

            <RadioButton
                android:id="@+id/rbUser"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:backgroundTint="@color/splashcolor"
                android:text="@string/user"/>

            <RadioButton
                android:id="@+id/rbProvider"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:backgroundTint="@color/splashcolor"
                android:text="@string/provider"/>

        </RadioGroup>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:elevation="@dimen/_10sdp"
            android:background="@color/white"
            app:cardCornerRadius="@dimen/_5sdp"
            app:contentPadding="@dimen/_2sdp"
            android:layout_marginRight="@dimen/_20sdp">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textSize="@dimen/_12sdp"
                android:inputType="textVisiblePassword"
                android:singleLine="true"
                android:background="@color/white"
                android:textColor="@color/black"
                android:padding="@dimen/_10sdp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:elevation="@dimen/_10sdp"
            android:background="@color/white"
            app:cardCornerRadius="@dimen/_5sdp"
            app:contentPadding="@dimen/_2sdp"
            android:layout_marginRight="@dimen/_20sdp">

            <EditText
                android:id="@+id/etEnterAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_amt"
                android:textSize="@dimen/_12sdp"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:maxLength="7"
                android:background="@color/white"
                android:textColor="@color/black"
                android:padding="@dimen/_10sdp" />

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:textStyle="bold"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_13sdp"
            android:layout_margin="@dimen/_20sdp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:background="@drawable/button_green"/>

    </LinearLayout>

</RelativeLayout>