<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/home_back"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/green_below_round_back"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/back_white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:layout_weight="1"
                    android:layout_centerInParent="true"
                    android:text="@string/generate_invoice"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold"/>

            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                app:contentPadding="@dimen/_5sdp"
                android:elevation="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvRequestAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_centerInParent="true"
                        android:drawableLeft="@drawable/ic_blue_location"
                        android:textSize="@dimen/_10sdp"
                        android:drawablePadding="@dimen/_5sdp"
                        android:textColor="@color/black"
                        android:backgroundTint="@color/white"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="@dimen/_12sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:textColor="@color/black"
                        android:text="@string/desp"/>

                    <TextView
                        android:id="@+id/tvRequestDesp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:textColor="@color/black" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/_10sdp"
                android:textSize="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/colorPrimary"
                android:text="@string/generate_invoice"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="@dimen/_12sdp"
                    android:layout_centerVertical="true"
                    android:textColor="@color/black"
                    android:text="@string/hours_worked"/>

                <TextView
                    android:id="@+id/tvHoursWorked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="@dimen/_12sdp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/black"
                    android:text="@string/hours_worked"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:layout_centerVertical="true"
                    android:textColor="@color/black"
                    android:text="@string/rate_per_hour"/>

                <TextView
                    android:id="@+id/tvRatePerHours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/black"
                    android:text="@string/hours_worked"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="@dimen/_12sdp"
                    android:layout_centerVertical="true"
                    android:textColor="@color/black"
                    android:text="@string/total_hour_price"/>

                <TextView
                    android:id="@+id/tvTotalWorkedPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="@dimen/_12sdp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/black"
                    android:text="@string/hours_worked"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/itemsUsed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/_10sdp"
                android:textSize="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/colorPrimary"
                android:text="@string/items_used"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvItemUsed"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="@dimen/_13sdp"
                    android:layout_centerVertical="true"
                    android:textColor="@color/black"
                    android:text="@string/item_total"/>

                <TextView
                    android:id="@+id/tvItemTotalPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="@dimen/_13sdp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/black"
                    android:text="$25"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:background="@color/gray2"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="@dimen/_16sdp"
                    android:layout_centerVertical="true"
                    android:textColor="@color/black"
                    android:text="@string/total_price"/>

                <TextView
                    android:id="@+id/tvTotalPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="@dimen/_16sdp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/red"
                    android:text="$25"/>

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/_16sdp"
                android:visibility="gone"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_centerVertical="true"
                android:textColor="@color/colorPrimary"
                android:text="@string/chosse_pay_method"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_15sdp">

                <RadioButton
                    android:id="@+id/cbCardPayment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    android:textColor="@color/black"
                    android:text="@string/online_payment"/>

                <RadioButton
                    android:id="@+id/cbWallet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:visibility="gone"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:text="@string/wallet"/>

                <RadioButton
                    android:id="@+id/cbCash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:visibility="gone"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:text="@string/cash"/>

            </RadioGroup>

            <Button
                android:id="@+id/btPayNow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:textAllCaps="false"
                android:layout_marginBottom="@dimen/_20sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:background="@drawable/button_back_green_10"
                android:text="@string/pay_now"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>